3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Fix a few compiler warnings.  Most were just unused variables, but
some in server/c_object.c had returns without values.
Files: server/c_object.c server/monster.c server/player.c server/weather.c 
MSW 2007-02-08

Remove static buffer for query_name().
 common/item.c
 include/libproto.h
 server/apply.c attack.c build_map.c c_object.c c_range.c c_wiz.c gods.c monster.c move.c player.c plugins.c
  server.c shop.c skill_util.c spell_attack.c spell_util.c
 common/living.c object.c readable.c
 socket/item.c
 types/common/describe.c
 types/converter/converter.c
 types/example.c
 types/item_transformer/item_transformer.c
 types/legacy/apply.c legacy_describe.c
 types/transport/transport.c
Ryo 2007-02-08

More generator enhancements:

Added a generator_max field to generators.  If this field is set, the
generator will only create this many objects on the map at one time.
It sets a generator_code key/value in itself and any objects it creates,
so it can identify them when counting.  This code is taken from the new
generator_name field if it exists, or the "name" field otherwise.
 server/time.c: added the scan for child objects to generate_monster,
    and setting the code to child objects in the generate_monster_*
    routines.
Aaron Baugher 2007-02-08

common/button.c: fix memory leak if map is NULL.
---
Some static buffer removal, replaced by buffer + size parameters.
 common/item.c: use const char* for constants. Remove some static buffers.
  Remove unused function.
 common/holy.c readable.c: adjust to functions.
 include/libproto.h: new function prototypes.
 server/apply.c c_object.c: changes to function calls.
Ryo 2007-02-08

