@@ -15,6 +15,15 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+common/item.c: fix documentation.
+--
+Remove some more static buffers.
+ common/item.c info.c readable.c
+ include/libproto.h
+ server/plugins.c spell_effect.c
+ types/common/describe.c
+Ryo 2007-02-09
+
 Fix a few compiler warnings.  Most were just unused variables, but
 some in server/c_object.c had returns without values.
 Files: server/c_object.c server/monster.c server/player.c server/weather.c 
